--- a/public/scss/style.scss
+++ b/public/scss/style.scss
@@ -1,9 +1,9 @@
 @import url("https://fonts.googleapis.com/css2?family=Roboto+Condensed:ital,wght@0,300;0,400;0,700;1,300;1,400;1,700&family=Saira:wght@100;200;300;400;500;600;700;800;900&family=Ubuntu:ital,wght@0,300;0,400;0,500;0,700;1,300;1,400;1,500;1,700&display=swap");
 $color-body: #fff;
-$primary-colour: #ff5d8f;
+$primary-colour: #6574cd;
 $second-colour: #ff87ab;
-$third-colour: #330010;
-$fourth-colour: #fadde1;
+$third-colour: #001933;
+$fourth-colour: #ddebfa;
 $color-white: #fff;
 $color-black: #000;
 $poppins: "Poppins", sans-serif;
@@ -63,7 +63,7 @@ a {
 @import "dokter";
 @import "detailDokter";
 @import "contact";
-@media screen and(max-width: 767px) {
+@media screen and (max-width: 767px) {
     html {
         font-size: 50%;
     }
